--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,149 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0px;
+  background-color: #f5f5f5;
+}
+
+
+.container-label {
+  margin-top: 10px;
+  width: 100%;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.item-transfer {
+  width: 100%;
+  height: 56px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.09);
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding-bottom: 5px;
+}
+
+.item-transfer .phone {
+  margin-left: 20px;
+}
+
+.item-transfer .amount {
+  margin-left: 20px;
+}
+
+.item-transfer .add {
+  color: lawngreen;
+}
+
+
+.item-transfer .remove {
+  color: red;
+}
+
+.item-transfer .pending {
+  color: #dede0c;
+}
+
+.window {
+  margin-top: 20px;
+  width: 800px;
+  min-height: 200px;
+  border-radius: 20px;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.07);
+  padding: 20px;
+  padding-top: 10px;
+}
+
+.background {
+  background-image: url(https://cdn1.iconfinder.com/data/icons/food-5-7/128/Vigor_Banana-Peel-Fruit-Ripe-Healthy-1024.png), url(https://cdn1.iconfinder.com/data/icons/food-5-7/128/Vigor_Banana-Peel-Fruit-Ripe-Healthy-1024.png);
+  background-size: 15%;
+  background-repeat: no-repeat;
+  background-position: 734px -25px, -37px bottom;
+}
+
+.background-top-right {
+  background-image: url(https://cdn1.iconfinder.com/data/icons/food-5-7/128/Vigor_Banana-Peel-Fruit-Ripe-Healthy-1024.png);
+  background-size: 15%;
+  background-repeat: no-repeat;
+  background-position: 734px -25px;
+}
+
+.container-label input {
+  border: 1px solid rgba(0, 0, 0, 0.39);
+  width: 80%;
+  height: 48px;
+  padding-left: 10px;
+  font-size: 22px;
+  border-radius: 10px;
+}
+
+.container-left {
+  margin-top: 0px;
+  width: 100%;
+  height: 48px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.hello {
+  width: auto;
+  font-size: 25px;
+
+}
+
+/* panel */
+
+.top-panel {
+  width: calc(100% - 150px);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  height: 64px;
+  background-color: white;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.22);
+  display: flex;
+  justify-content: start;
+  align-items: center;
+
+  padding-left: 150px;
+}
+
+.item-panel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  width: 100px;
+  height: 100%;
+  font-size: 17px;
+  cursor: pointer;
+  padding-right: 30px;
+  padding-left: 30px;
+
+  user-select: none;
+}
+
+.item-panel:hover {
+  background-color: rgba(0, 0, 0, 0.06);
+  text-decoration: underline;
+}
+
+.panel {
+  width: calc(100% - 400px);
+  height: 64px;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
+.container-right {
+  margin-top: 0px;
+  width: 100%;
+  height: 48px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
