--- a/src/app/app/authentication/singin/singin.component.html
+++ b/src/app/app/authentication/singin/singin.component.html
@@ -24,6 +24,6 @@
 <div class="container-label" style="margin-top: 20px">
   <div class="container-right" style="width: 82%;">
     <app-button-keep (click)="navigateSignUp()" text="Sing Up"></app-button-keep>
-    <app-button-accept text="Sign In" style="margin-left: 10px"></app-button-accept>
+    <app-button-accept (click)="signIn()" text="Sign In" style="margin-left: 10px"></app-button-accept>
   </div>
 </div>
