--- a/src/app/app/index/index.component.html
+++ b/src/app/app/index/index.component.html
@@ -53,7 +53,7 @@
         <div class="container-left" style="height: auto;align-items: start">
           <div>
             <img style="width: 300px"
-                 src="https://lh3.googleusercontent.com/proxy/pRdHko-OxmDynw8I87QNbm7zG1mi1cUHU-WmxFNfUibowWhUSAbW8Ve_CGYogF5PG2vbAJXiudAyS6w3tjlZfhaRARRs3QYSwj7p57LnXL_T39XdWauBpCSSXvi7KMrOApCa_qaNHZk">
+                 src="https://www.edupics.com/image-banana-dm23207.jpg">
           </div>
           <div style="margin-left: 20px;padding-right: 50px;margin-top: 20px">
             <div>
