--- a/src/app/app/wallet/wallet-transfer/wallet-transfer.component.html
+++ b/src/app/app/wallet/wallet-transfer/wallet-transfer.component.html
@@ -3,7 +3,7 @@
   <div class="container-label" style="justify-content: start">
 
     <div class="hello">
-      <b>Good day</b>, Anton Sibgatulin, your balance <b>20.000$</b>
+      <b>Good day</b>, {{getName()}}, your balance <b>{{getBalance()}}</b>
     </div>
 
   </div>
@@ -48,7 +48,7 @@
   </div>
 
   <div class="container-label" style="justify-content: end;margin-top: 40px;width: 91%">
-    <app-button-accept text="Send"></app-button-accept>
+    <app-button-accept (click)="transfer()" text="Send"></app-button-accept>
   </div>
 
 
@@ -58,13 +58,10 @@
 </div>
 
 <div class="window background-top-right">
-  <app-transfer-item phone="79999999999" type="add" status="PENDING" amount="20"></app-transfer-item>
-  <app-transfer-item phone="79999999999" type="add" status="PENDING" amount="20"></app-transfer-item>
-  <app-transfer-item phone="79999999999" type="add" status="PENDING" amount="20"></app-transfer-item>
-  <app-transfer-item phone="79999999999" type="add" status="PENDING" amount="20"></app-transfer-item>
-  <app-transfer-item phone="79999999999" type="add" status="PENDING" amount="20"></app-transfer-item>
-  <app-transfer-item phone="79999999999" type="add" status="PENDING" amount="20"></app-transfer-item>
-  <app-transfer-item phone="79999999999" type="add" status="PENDING" amount="20"></app-transfer-item>
+  <ng-container *ngFor="let item of transactions">
+    <app-transfer-item phone="{{getNumberItem(item)}}" type="{{getType(item)}}" status="{{item.status}}"
+                       amount="{{item.amount}}"></app-transfer-item>
+  </ng-container>
 </div>
 
 <div style="height: 48px"></div>
